dodopassboard.css
@use "@material/floating-label/mdc-floating-label";

@font-face {
  font-family: 'TTNorms';
  src: url("/dodo_passboard/TTNorms-Bold.woff");
  font-display: block;

}

.mdc-button,
.mdc-text-field,
.mdc-floating-label {
  --mdc-theme-primary: #5adcc9;
}

#form{
	width: 760px;
	height: 1px;
	margin-left: auto;
	margin-right: auto;
}

body {
  background: url(PNQ5cOe.png) repeat;
}

